feat: get user tastes endpoint
